# kubernetes-list-type-map-and-server-side-apply

./: Cargo.toml  README.md
src/: apply_crd.rs  create.rs  document.rs  update.rs
