[package]
name = "kubernetes-list-type-map-and-server-side-apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "apply_crd"
path = "src/apply_crd.rs"

[[bin]]
name = "create"
path = "src/create.rs"

[[bin]]
name = "update"
path = "src/update.rs"

[dependencies]
console = "0.15.0"
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
schemars = "0.8.12"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
similar = "2.3.0"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }